--- a/index.html
+++ b/index.html
@@ -13,24 +13,16 @@
         <input type="checkbox" id="toggle" />
         <label for="toggle" class="labelToggle">
             <div class="circles">
-                <div class="circle2 circle"></div>
-                <div class="circle2 circle"></div>
-                <div class="circle2 circle"></div>
-                <div class="circle2 circle"></div>
+                <div class="circle2 circle dayc1"></div>
+                <div class="circle2 circle dayc2"></div>
+                <div class="circle2 circle dayc3"></div>
+                <div class="circle2 circle dayc4"></div>
             </div>
             <div class="day">
-                <!-- <div class="circle"></div> 
-                <div class="circle"></div> 
-                <div class="circle"></div> 
-                <div class="circle"></div>  -->
                 <img src="day.svg" class="day-img-1" alt="">
                 <img src="day-2.svg" class="day-img-2" alt="">
             </div>
-            <div class="night hidden">
-                <!-- <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div> -->
+            <div class="night">
                 <img src="stars.svg" class="stars" alt="">
             </div>
         </label>
